--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 			integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<div id="root"></div>
